fix last compiler warnings